se implemento supabase e integracion con los eventos
